--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
+  background-color: #efefef;
+  gap: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.details {
+  position: absolute;
+  bottom: 20px;
+  transition: all .5s ease-in-out;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.hidden {
+  bottom: -800px; 
+}
+
+.mapboxgl-map {
+  height: 100% !important;
+  width: 100% !important;
 }
